--- a/base-apparel-coming-soon-master/index.html
+++ b/base-apparel-coming-soon-master/index.html
@@ -14,13 +14,25 @@
 <body>
 
   <div class="container">
-    <main>
-      <header>
+    <header>
         <img src="images/logo.svg">
-      </header>
+    </header>
+    <main>
       <section>
-        <h2>We're coming soon</h2>
-        <p></p>
+        <h2><span>We're</span><br>coming<br> soon</h2>
+        <p>Hello fellow shoppers! We're currently building our new 
+        fashion store. Add your email below to stay up-to-date with
+         announcements and our launch deals.</p>
+         <form action="">
+          <div class="emailBox">
+            <input type="text" name="" placeholder="Email Address">
+            <button type="submit">
+              <img src="images/icon-arrow.svg">
+            </button>
+          </div>
+           
+         </form>
+         
       </section>
     </main>
     <div class="photoBlock"></div>
